recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:1: error: Missing closing brace `}' assumed here
def drawCurve(levels:Int, length:Double) {
^HexaKoch:1: error: expected class or object definition
def drawCurve(levels:Int, length:Double) {
^HexaKoch:4: error: expected class or object definition
def hexaKoch(levels:Int, length:Double) {
^